// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`expect works while firing add events 1`] = `
Object {
  "addCount": 1,
  "failCount": 0,
  "lastTestContext": Object {
    "file": "imageSnapshotEvents.test.js",
    "fullTitle": "image snapshot events test expect works while firing add events",
    "snapshotFile": "__snapshots__/image-snapshot-events-test-js-expect-works-while-firing-add-events-1",
    "title": "expect works while firing add events",
  },
  "passCount": 0,
  "updateCount": 0,
}
`;

exports[`expect works while firing fail events 1`] = `
Object {
  "addCount": 0,
  "failCount": 1,
  "lastTestContext": Object {
    "diffOutputPath": "__snapshots__/image-snapshot-events-test-js-expect-works-while-firing-fail-events-1-diff.png",
    "file": "imageSnapshotEvents.test.js",
    "fullTitle": "image snapshot events test expect works while firing fail events",
    "snapshotFile": "__snapshots__/image-snapshot-events-test-js-expect-works-while-firing-fail-events-1",
    "title": "expect works while firing fail events",
  },
  "passCount": 0,
  "updateCount": 0,
}
`;

exports[`expect works while firing pass events 1`] = `
Object {
  "addCount": 0,
  "failCount": 0,
  "lastTestContext": Object {
    "diffOutputPath": "__snapshots__/image-snapshot-events-test-js-expect-works-while-firing-pass-events-1-diff.png",
    "file": "imageSnapshotEvents.test.js",
    "fullTitle": "image snapshot events test expect works while firing pass events",
    "snapshotFile": "__snapshots__/image-snapshot-events-test-js-expect-works-while-firing-pass-events-1",
    "title": "expect works while firing pass events",
  },
  "passCount": 1,
  "updateCount": 0,
}
`;

exports[`expect works while firing update events 1`] = `
Object {
  "addCount": 0,
  "failCount": 0,
  "lastTestContext": Object {
    "file": "imageSnapshotEvents.test.js",
    "fullTitle": "image snapshot events test expect works while firing update events",
    "snapshotFile": "__snapshots__/image-snapshot-events-test-js-expect-works-while-firing-update-events-1",
    "title": "expect works while firing update events",
  },
  "passCount": 0,
  "updateCount": 1,
}
`;

exports[`wont throw when using imageFailuresThrow: false 1`] = `
Object {
  "addCount": 0,
  "failCount": 1,
  "lastTestContext": Object {
    "diffOutputPath": "__snapshots__/image-snapshot-events-test-js-wont-throw-when-using-image-failures-throw--false-1-diff.png",
    "file": "imageSnapshotEvents.test.js",
    "fullTitle": "image snapshot events test wont throw when using imageFailuresThrow: false",
    "snapshotFile": "__snapshots__/image-snapshot-events-test-js-wont-throw-when-using-image-failures-throw--false-1",
    "title": "wont throw when using imageFailuresThrow: false",
  },
  "passCount": 0,
  "updateCount": 0,
}
`;
